// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshot Tests Multiple texts render properly 1`] = `
.text-textStyle {
  color: #121212;
  font-size: 16px;
  font-weight: bold;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: undefined;
}

.text-textStyle {
  color: #8A8A8A;
  font-size: 14px;
  font-weight: bold;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: undefined;
}

.text-textStyle {
  color: #E05666;
  font-size: 12px;
  font-weight: bold;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: undefined;
}

<div
  className="text-textStyle"
>
  <div
    className="text-textStyle"
  >
    First text
  </div>
  <div
    className="text-textStyle"
  >
    Second text
  </div>
  <div
    className="text-textStyle"
  >
    Third text
  </div>
</div>
`;

exports[`Button Snapshot Tests Primary large button renders properly 1`] = `
.text-textStyle {
  color: #121212;
  font-size: 16px;
  font-weight: bold;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: undefined;
}

<div
  className="text-textStyle"
>
  Default text
</div>
`;

exports[`Button Snapshot Tests Secondary large button renders properly 1`] = `
.text-textStyle {
  color: #8A8A8A;
  font-size: 14px;
  font-weight: bold;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: center;
}

<div
  className="text-textStyle"
  onClick={[MockFunction]}
>
  Second text
</div>
`;

exports[`Button Snapshot Tests Tertiary large button renders properly 1`] = `
.text-textStyle {
  color: #121212;
  font-size: 48px;
  font-weight: 900;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: center;
}

<div
  className="text-textStyle"
  onClick={[MockFunction]}
>
  First text
</div>
`;

exports[`Button Snapshot Tests Tertiary text renders properly 1`] = `
.text-textStyle {
  color: #E05666;
  font-size: 12px;
  font-weight: bold;
  font-family: Lato, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: left;
}

<div
  className="text-textStyle"
>
  Second text
</div>
`;
